Model (DTO) structure changed. Added log @Slf4j, Completed security, fixed errors.